style: Fixed paragraph alignment and line separations

--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
 :root {
   --background: #f7f7f7;
   --foreground: #171717;
